# shellcomp-rs

./: .justfile  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: clap_integration.rs  inspect_managed_paths.rs  install_prebuilt.rs  roundtrip_custom_path.rs
src/: api.rs  error.rs  lib.rs  model.rs  tests.rs
src/infra/: env.rs  fs.rs  managed_block.rs  mod.rs  paths.rs
src/service/: detect.rs  install.rs  migrate.rs  mod.rs  uninstall.rs
src/shell/: bash.rs  elvish.rs  fish.rs  mod.rs  powershell.rs  zsh.rs
tests/: public_api.rs
